--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+language: perl
+perl:
+  - "5.14"
+  - "5.12"
+  - "5.10"
 before_script: "cd PulseMeter && perl Makefile.pl"
 script: "cd PulseMeter && make test"
 branches:
